# FlightGoggles_Training

./: .gitignore  .rosinstall  .rosinstall.bak  README.md  ReadmeV2.md  clear_out.py  clear_values.py  control_drone.py  data_collection_regimen.py  label_gate_orientations.py  leaderboard_README.md  publisher.py  republish_colored_gates.py  setup_collection_intructions.txt  tour_gates.py  yaml_example.py  yaw_republisher.py
data/: clear.sh
flightgoggles/flightgoggles/: final_challenge_course_gates.yaml
flightgoggles/flightgoggles/config/challenges/: challenge_final.yaml
flightgoggles/flightgoggles/config/drone/: drone.yaml
flightgoggles/flightgoggles/launch/: nimbus.launch  reporter.launch  results_gate_locations_14.yaml  scorer.launch
flightgoggles/flightgoggles/launch/results/: results_gate_locations_1.yaml  results_gate_locations_3.yaml  results_gate_locations_4.yaml  results_gate_locations_5.yaml
flightgoggles/flightgoggles/rviz/: third_person_drone_follower.rviz  third_person_drone_follower_stereo.rviz
flightgoggles/flightgoggles_reporter/src/: reporter.py  test_pub.cpp
flightgoggles/flightgoggles_ros_bridge/src/Common/: FlightGogglesClient.cpp
flightgoggles/flightgoggles_ros_bridge/src/ROSClient/: ROSClient.cpp  ROSClient.hpp
flightgoggles/flightgoggles_uav_dynamics/src/: flightgoggles_uav_dynamics_node.cpp  flightgoggles_uav_dynamics_node.hpp
gate_results/: trial_storage.txt
new_target/: PID.py
src/: README.md
universal_teleop/: CMakeLists.txt  package.xml
universal_teleop/launch/: example_input_map.yml  xbox_one_controller.launch  xbox_one_controller_input_map.yml
universal_teleop/src/: teleop.cpp  teleop.h
